--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="cv.pdf" download="#">Cv/Resume</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -39,10 +40,13 @@
           <h1>Hi, I'm Fikri Zulfikar</h1>
           <h2>I'm a Developer</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-            incidunt, tenetur optio cupiditate, cumque, officia quaerat vero
-            neque quis libero dolore fuga quisquam dolorum sint! Unde facilis
-            dolores cum ducimus!
+            I am a fresh graduate with a final GPA of 3.59 out of 4.00 in
+            Information Systems. I have gained experience in the fields of
+            software engineering,data processing and Customer Experience.
+            Additionally, I have actively participated in various projects and
+            coursework to enhance my analytical and problem-solving skills. I
+            enjoy working both individually and in teams, and I always strive to
+            give my best in every task I undertake.
           </p>
           <div class="buttons">
             <button class="btn">Hire me</button>
@@ -88,8 +92,108 @@
           <p>Satisfied<br />Clients</p>
         </div>
       </div>
-    </section>
 
+      <section class="skills-section" id="skills">
+        <h2 class="skills-title">here are the skills I have</h2>
+        <div class="skills-grid">
+          <div class="skill-card">
+            <i class="bx bxl-html5"></i>
+            <p>HTML</p>
+          </div>
+          <div class="skill-card">
+            <i class="bx bxl-css3"></i>
+            <p>CSS</p>
+          </div>
+          <div class="skill-card">
+            <i class="bx bxl-javascript"></i>
+            <p>JavaScript</p>
+          </div>
+          <div class="skill-card">
+            <i class="bx bxl-tailwind-css"></i>
+            <p>Tailwind</p>
+          </div>
+          <div class="skill-card">
+            <i class="bx bxl-git"></i>
+            <p>Git</p>
+          </div>
+          <div class="skill-card">
+            <i class="bx bxl-github"></i>
+            <p>Github</p>
+          </div>
+          <div class="skill-card">
+            <i class="bx bxl-python"></i>
+            <p>Python</p>
+          </div>
+          <div class="skill-card">
+            <i class="bx bxl-go-lang"></i>
+            <p>Golang</p>
+          </div>
+        </div>
+      </section>
+
+      <!--Project-->
+      <section id="projects" class="projects-section">
+        <h2 class="section-title">What I have Build</h2>
+        <div class="project-grid">
+          <!-- Project Card 1 -->
+          <div class="project-card">
+            <img src="img/project.jpg" alt="Youtube Clone" />
+            <div class="project-info">
+              <h3>Wargaku</h3>
+              <p>HTML,CSS,JavaScript,Bootstap</p>
+              <a
+                href="https://wargaku.vercel.app/"
+                class="demo-btn"
+                target="_blank"
+                >Go to Demo</a
+              >
+            </div>
+          </div>
+
+          <!-- Project Card 2 -->
+          <div class="project-card">
+            <img src="img/project.jpg" alt="Project 2" />
+            <div class="project-info">
+              <h3>Forecasting Cabai Merah</h3>
+              <p>Phyton</p>
+              <a
+                href="https://colab.research.google.com/drive/102DwXpC1gvFIw484VusEQ3FJUSo829dy?usp=sharing"
+                class="demo-btn"
+                target="_blank"
+                >Go to Demo</a
+              >
+            </div>
+          </div>
+
+          <!-- Project Card 3 -->
+          <div class="project-card">
+            <img src="img/project.jpg" alt="Project 2" />
+            <div class="project-info">
+              <h3>Analisis Sentimen</h3>
+              <p>Phyton</p>
+              <a
+                href="https://colab.research.google.com/drive/1KkABsKXag3WfXoJvX6v1AcYclXDapd5w?usp=sharing"
+                class="demo-btn"
+                target="_blank"
+                >Go to Demo</a
+              >
+            </div>
+          </div>
+          <!-- Tambahkan lebih banyak card sesuai kebutuhan -->
+          <!-- Project Card 3 -->
+          <div class="project-card">
+            <img src="img/project.jpg" alt="Project 2" />
+            <div class="project-info">
+              <h3>Another Project</h3>
+              <p>HTML, CSS</p>
+              <a href="https://linktodemo2.com" class="demo-btn" target="_blank"
+                >Go to Demo</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
     <!-- JavaScript untuk toggle menu -->
     <script>
       const toggle = document.getElementById("menu-toggle");
