--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             give my best in every task I undertake.
           </p>
           <div class="buttons">
-            <button class="btn">Hire me</button>
+            <button class="btn"><a href="#contact"></a>Hire me</button>
             <ul class="ul-icons">
               <li>
                 <a href="https://github.com/Vkar12"
@@ -187,7 +187,7 @@
               <h3>Ternakku</h3>
               <p>HTML, CSS,JS,Bootstap</p>
               <a
-                href="https://ternakku-pearl.vercel.app/"
+                href="https://ternakku-lime.vercel.app/"
                 class="demo-btn"
                 target="_blank"
                 >Go to Demo</a
